# SWE-bench

./: .gitignore  .runner-known-hosts  README.md
cloud/: .gitignore  README.md  package-lock.json  package.json  sst.config.ts  swb  tsconfig.json
cloud/infra/: _common.sh  bootstrap.sh  connect.sh  deploy.sh  destroy.sh  install-deps.sh  push-env.sh  resize-data-volume.sh  runner.ts  ssh.sh  sync.sh
cloud/lib/: common.sh  r2.sh  ssh.sh  ssm.sh
cloud/remote/: bootstrap.sh  docker-login.sh  notify.sh  ready.sh  results.sh  run_job.sh
cloud/scripts/: _common.sh  bootstrap.sh  connect.sh  deploy.sh  destroy.sh  (+18 more)
mini-swe-runs/: .env.example  .gitignore  README.md  evaluate.sh  litellm_registry.json  model.yaml  prepull.sh  prune_images.sh  pyproject.toml  repro_runaway.sh  run.sh  run_full.sh  run_smoke.sh  timings.sh  trace_proxy.py  turn_failure_model.py
mini-swe-runs/scripts/: _run_name.sh  docker_storage.sh  eval_notify_line.sh  evaluate.sh  hydrate_run_yaml.py  prepull.sh  prune_images.sh  repro_runaway.sh  run.sh  salvage_preds.sh  status.sh  summary.sh  timings.sh
mini-swe-runs/subsets/: illustrative-50.json
mini-swe-runs/yaml/: README.md
mini-swe-runs/yaml/kimi/: smoke.yaml  verified-full.yaml
mini-swe-runs/yaml/nex-n2-mini/: illustrative-50.yaml  smoke.yaml  verified-full.yaml
mini-swe-runs/yaml/qwen/: illustrative-50.yaml  optimized-v1.yaml  optimized-v2.yaml  smoke.yaml  spark-35b-a3b-4bit-v1.yaml  spark-4bit-v1.yaml  spark-8bit-v1.yaml  spark-smoke.yaml  verified-full-v2.yaml
mini-swe-runs/yaml/qwen-base/: smoke.yaml  verified-full.yaml
(+6 files in other folders)
